cabal-version:   2.2
name:            servant-activeresource
version:         0.2.0.0
synopsis:        Servant endpoints compatible with Rails's ActiveResource
description:
  [ActiveResource](https://github.com/rails/activeresource) is a Rails
  library for representing resources from a RESTful API as Ruby
  objects, with a similar interface to the Rails ActiveRecord ORM.
  .
  This library provides types for describing such APIs, and functions
  to help implement Servant-style servers that provide them.

homepage:        https://github.com/bellroy/servant-activeresource
bug-reports:     https://github.com/bellroy/servant-activeresource/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Bellroy Tech Team <haskell@bellroy.com>
maintainer:      Bellroy Tech Team <haskell@bellroy.com>
copyright:       Copyright (C) 2024-2025 Bellroy Pty Ltd
category:        Servant, Web
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.4
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/bellroy/servant-activeresource.git

common opts
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind

common deps
  build-depends:
    , aeson           ^>=2.1.1.0 || ^>=2.2
    , base            >=4.14     && <4.22
    , bytestring      >=0.10.12  && <0.13
    , containers      ^>=0.6     || ^>=0.7
    , servant         >=0.19     && <0.21
    , servant-server  >=0.19     && <0.21
    , text            ^>=1.2     || >=2.0  && <=2.2

library
  import:          deps, opts
  exposed-modules: Servant.ActiveResource
  hs-source-dirs:  src

test-suite spec
  import:         deps, opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:  servant-activeresource
